--- a/MyPokemonBlazorApp/Components/Pages/Info.razor
+++ b/MyPokemonBlazorApp/Components/Pages/Info.razor
@@ -11,7 +11,7 @@ else
 {
     <p>No pokemon found for that Id</p>
 }
-<div class="progress progress-lg" style="height: 30px"
+<div class="progress progress-lg" style="height: 30px">
     <div class="progress-bar bg-primary" role="progressbar" aria-label="Success example" aria-valuenow="@pokemon?.HP" style="width = (@pokemon?.HP*100/255)"  aria-valuemin="0" aria-valuemax="255"></div>
 </div>
 
