--- a/MyPokemonBlazorApp/Components/Pages/Info.razor
+++ b/MyPokemonBlazorApp/Components/Pages/Info.razor
@@ -1,34 +1,46 @@
 ﻿@page "/Info/{id:int}"
 @inject DatabaseContext DbContext
+@inject PokemonImageGrabber ImageGrabber
 
 <h3>Info</h3>
 
 @if (pokemon is not null)
 {
     <p>@pokemon?.Name</p>
+    <img src="@imageUrl" onerror="this.onerror=null;this.src='/img/notfound.png';" class="img-fluid img-thumbnail rounded-start" alt="@pokemon?.Name" />
 }
 else
 {
     <p>No pokemon found for that Id</p>
 }
-<div class="progress progress-lg" style="height: 30px">
-    <div class="progress-bar bg-primary" role="progressbar" aria-label="Success example" aria-valuenow="@pokemon?.HP" style="width = (@pokemon?.HP*100/255)"  aria-valuemin="0" aria-valuemax="255"></div>
-</div>
 
-<div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="@pokemon?.Attack" style="width = (@pokemon?.Attack*100/255)" aria-valuemin="0" aria-valuemax="255"></div>
-
-<div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="@pokemon?.Defence" style="width = (@pokemon?.Defence*100/255)" aria-valuemin="0" aria-valuemax="255"></div
-
-<div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="@pokemon?.Speed" style="width = (@pokemon?.Speed*100/255)"  aria-valuemin="0" aria-valuemax="255"></div>
 @code 
 {
     [Parameter]
     public int Id { get; set; }
 
     private Pokemon? pokemon;
+    private string? imageUrl { get; set; }
 
     protected override void OnInitialized()
     {
         pokemon = DbContext.Pokemons.SingleOrDefault(p => p.Id == Id);
+        imageUrl = ImageGrabber.GetImageUrl(pokemon);
     }
 }
+
+<div class="progress" role="progressbar" aria-valuenow="@pokemon?.HP" aria-valuemin="0" aria-valuemax="255">
+    <div class="progress-bar bg-danger" style="width: @(pokemon?.HP*100/255)%"></div>
+</div>
+<div class="progress" role="progressbar" aria-valuenow="@pokemon?.Attack" aria-valuemin="0" aria-valuemax="255">
+    <div class="progress-bar bg-warning" style="width: @(pokemon?.Attack*100/255)%"></div>
+</div>
+<div class="progress" role="progressbar" aria-valuenow="@pokemon?.Defence" aria-valuemin="0" aria-valuemax="255">
+    <div class="progress-bar bg-primary" style="width: @(pokemon?.Defence*100/255)%"></div>
+</div>
+<div class="progress" role="progressbar" aria-valuenow="@pokemon?.Speed" aria-valuemin="0" aria-valuemax="255">
+    <div class="progress-bar bg-success" style="width: @(pokemon?.Speed*100/255)%"></div>
+</div>
+<div class="progress" role="progressbar" aria-valuenow="@pokemon?.Total" aria-valuemin="0" aria-valuemax="800">
+    <div class="progress-bar bg-info" style="width: @(pokemon?.Total*100/800)%"></div>
+</div>
