--- a/MyPokemonBlazorApp/Components/Pages/Info.razor
+++ b/MyPokemonBlazorApp/Components/Pages/Info.razor
@@ -4,10 +4,8 @@
 
 <h3>Info</h3>
 
-@if (pokemon is not null)
+@if (Pokemon is not null)
 {
-    <p>@pokemon?.Name</p>
-    <img src="@imageUrl" onerror="this.onerror=null;this.src='/img/notfound.png';" class="img-fluid img-thumbnail rounded-start" alt="@pokemon?.Name" />
 }
 else
 {
@@ -19,28 +17,73 @@ else
     [Parameter]
     public int Id { get; set; }
 
-    private Pokemon? pokemon;
+    private Pokemon? Pokemon;
     private string? imageUrl { get; set; }
 
     protected override void OnInitialized()
     {
-        pokemon = DbContext.Pokemons.SingleOrDefault(p => p.Id == Id);
-        imageUrl = ImageGrabber.GetImageUrl(pokemon);
+        Pokemon = DbContext.Pokemons.SingleOrDefault(p => p.Id == Id);
+        imageUrl = ImageGrabber.GetImageUrl(Pokemon);
     }
 }
 
-<div class="progress" role="progressbar" aria-valuenow="@pokemon?.HP" aria-valuemin="0" aria-valuemax="255">
-    <div class="progress-bar bg-danger" style="width: @(pokemon?.HP*100/255)%"></div>
-</div>
-<div class="progress" role="progressbar" aria-valuenow="@pokemon?.Attack" aria-valuemin="0" aria-valuemax="255">
-    <div class="progress-bar bg-warning" style="width: @(pokemon?.Attack*100/255)%"></div>
-</div>
-<div class="progress" role="progressbar" aria-valuenow="@pokemon?.Defence" aria-valuemin="0" aria-valuemax="255">
-    <div class="progress-bar bg-primary" style="width: @(pokemon?.Defence*100/255)%"></div>
-</div>
-<div class="progress" role="progressbar" aria-valuenow="@pokemon?.Speed" aria-valuemin="0" aria-valuemax="255">
-    <div class="progress-bar bg-success" style="width: @(pokemon?.Speed*100/255)%"></div>
-</div>
-<div class="progress" role="progressbar" aria-valuenow="@pokemon?.Total" aria-valuemin="0" aria-valuemax="800">
-    <div class="progress-bar bg-info" style="width: @(pokemon?.Total*100/800)%"></div>
+<div class="row g-0">
+    <div class="col-md-3 me-1">
+        <img src="@imageUrl" onerror="this.onerror=null;this.src='/img/notfound.png';" class="img-fluid img-thumbnail rounded-start" alt="@Pokemon.Name" />
+    </div>
+    <div class="col-md-8">
+        <div class="card mb-3">
+            <div class="card-body bg-light">
+                <h5 class="card-title">@Pokemon?.Name</h5>
+                <p>
+                    <span class="badge rounded-pill text-bg-primary">@Pokemon?.Type</span>
+                    <span class="badge rounded-pill text-bg-success">@Pokemon?.Generation</span>
+                    @if (Pokemon.Legendary)
+                    {
+                        <span class="badge rounded-pill text-bg-warning">@Pokemon?.Legendary</span>
+                    }
+                </p>
+                <div class="row g-2 mb-1">
+                    <div class="col-md-2">HP</div>
+                    <div class="col-md-9">
+                        <div class="progress" role="progressbar" aria-valuenow="@Pokemon?.HP" aria-valuemin="0" aria-valuemax="255" style="height: 30px">
+                            <div class="progress-bar bg-danger" style="width: @(Pokemon?.HP*100/255)%">@Pokemon?.HP</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row g-2 mb-1">
+                    <div class="col-md-2">Attack</div>
+                    <div class="col-md-9">
+                        <div class="progress" role="progressbar" aria-valuenow="@Pokemon?.Attack" aria-valuemin="0" aria-valuemax="255" style="height: 30px">
+                            <div class="progress-bar bg-warning" style="width: @(Pokemon?.Attack*100/255)%">@Pokemon?.Attack</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row g-2 mb-1">
+                    <div class="col-md-2">Defense</div>
+                    <div class="col-md-9">
+                        <div class="progress" role="progressbar" aria-valuenow="@Pokemon?.Defence" aria-valuemin="0" aria-valuemax="255" style="height: 30px">
+                            <div class="progress-bar bg-primary" style="width: @(Pokemon?.Defence*100/255)%">@Pokemon?.Defence</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row g-2 mb-1">
+                    <div class="col-md-2">Speed</div>
+                    <div class="col-md-9">
+                        <div class="progress" role="progressbar" aria-valuenow="@Pokemon?.Speed" aria-valuemin="0" aria-valuemax="255" style="height: 30px">
+                            <div class="progress-bar bg-success" style="width: @(Pokemon?.Speed*100/255)%">@Pokemon?.Speed</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row g-2 mb-1">
+                    <div class="col-md-2">Total</div>
+                    <div class="col-md-9">
+                        <div class="progress" role="progressbar" aria-valuenow="@Pokemon?.Total" aria-valuemin="0" aria-valuemax="800" style="height: 30px">
+                            <div class="progress-bar bg-info" style="width: @(Pokemon?.Total*100/800)%">@Pokemon?.Total</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
