--- a/MyPokemonBlazorApp/Components/Pages/PokemonList.razor
+++ b/MyPokemonBlazorApp/Components/Pages/PokemonList.razor
@@ -65,7 +65,7 @@
                         <label for="legendary" class="form-label">Legendary</label>
                     </div>
                     <div class="col-md-12">
-                        <button type="submit" class="btn btn-primary float-end">@(model.Id == 0 ? "Add Pokemon" : "Edit Pokemon")</button>
+                        <button type="submit" class="btn btn-primary float-end">@(model.Id == 0 ? "Add Pokemon" : "Save Changes")</button>
                     </div>
                 </div>
             </EditForm>
